CHANGES IN FLTK 1.1.0

	- FLTK convenience dialogs put the buttons in the wrong
	  order.
	- Fl_BMP_Image didn't load 4-bit BMP files properly.
	- Minor tweeks to the WIN32 DLL support.
	- Fl_Text_Display::resize() could go into an infinite
	  loop if the buffer is emptied.
	- Fl::handle() didn't pass FL_RELEASE events to the
	  grab() widget if pushed() was set (for proper menu
	  handling...)
	- DND events were being sent to the target window
	  instead of the target widget under WIN32.
	- The newest Cygwin needs the same scandir() handling as
	  HP-UX.
	- FLUID didn't register the image formats in the
	  fltk_images library, and had some other image
	  management problems.
	- Fixed one more redraw bug in Fl_Browser_ where we
	  weren't using the box function to erase empty space in
	  the list.
	- Fl_Text_Display::buffer() now calls resize() to show
	  the buffer.
	- Fl_Help_View didn't support HTML comments.
	- Fl_Help_View didn't include the extra cellpadding when
	  handling colspan attributes in cells.
	- Fl_Help_View didn't support table alignment.


CHANGES IN FLTK 1.1.0rc6

	- Documentation updates.
	- Fl::handle() didn't apply the modal tests for
	  FL_RELEASE events, which caused Fl_Tabs to allow users
	  to change tabs even when a modal window was open.
	- Fl_Browser_, Fl_Input_, Fl_Slider now use the box
	  function to erase the background.  This fixes some
	  long-standing redraw problems.
	- More snprintf/strlcpy/strlcat changes where needed.
	- Fl::get_font_name() would leak 128 bytes.
	- Eliminated most of the "shadowed" variables to avoid
	  potential problems with using the wrong copy of "foo"
	  in a class method.
	- Moved Fl_BMP_Image, Fl_GIF_Image, and Fl_PNM_Image to
	  the fltk_images library, so the only image formats
	  that are supported by the core library are XBM and XPM
	  files.  This reduces the size of the FLTK core library
	  by about 16k...
	- The Fl_Text_Display::resize() method was incorrectly
	  flagged as protected.