@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Menu_Button.cxx,v 1.4.2.3.2.4 2002/01/01 15:11:30 easysw Exp $"
+// "$Id: Fl_Menu_Button.cxx,v 1.4.2.3.2.5 2002/09/01 22:39:33 easysw Exp $"
 //
 // Menu button widget for the Fast Light Tool Kit (FLTK).
 //
@@ -69,6 +69,7 @@ int Fl_Menu_Button::handle(int e) {
     popup();
     return 1;
   case FL_KEYBOARD:
+    if (!box()) return 0;
     if (Fl::event_key() == ' ') {
       popup();
       return 1;
@@ -93,5 +94,5 @@ Fl_Menu_Button::Fl_Menu_Button(int X,int Y,int W,int H,const char *l)
 }
 
 //
-// End of "$Id: Fl_Menu_Button.cxx,v 1.4.2.3.2.4 2002/01/01 15:11:30 easysw Exp $".
+// End of "$Id: Fl_Menu_Button.cxx,v 1.4.2.3.2.5 2002/09/01 22:39:33 easysw Exp $".
 //
